--- a/vercel.json
+++ b/vercel.json
@@ -5,17 +5,29 @@
     {
       "src": "package.json",
       "use": "@vercel/node@16"
+    },
+    {
+      "src": "src/index.js",
+      "use": "@vercel/static-build"
     }
   ],
 
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "/manifest.json",
+      "dest": "/manifest.json"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/$1",
-      "headers": {
-        "Cache-Control": "s-maxage=1, stale-while-revalidate"
-      },
-      "continue": true
+      "dest": "/index.html"
     }
   ]
 }
