--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
 
   "routes": [
     {
-      "src": "/index.js",
+      "src": "index.js",
       "dest": "/$1",
       "headers": {
         "Cache-Control": "s-maxage=1, stale-while-revalidate"
